services/friend/deploy/ingress/friend-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friend-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: friend-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: friend-service
                port:
                  number: 8080
